<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

<!--    Header    -->
    <TextView
        android:id="@+id/profile_page_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:fontFamily="@font/proximanova_extrabold"
        android:lineHeight="39sp"
        android:text="@string/profile_header"
        android:textAppearance="@style/trips_near_"
        android:background="#C8102E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    Body    -->
    <View
        android:id="@+id/profile_card"
        android:layout_width="300dp"
        android:layout_height="340dp"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/bg_sq_white"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/profile_page_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    
    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:background="@drawable/circle_outline"
        android:elevation="5dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintStart_toStartOf="@id/profile_card"
        app:layout_constraintEnd_toEndOf="@id/profile_card"
        app:layout_constraintTop_toTopOf="@id/profile_card"
        />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:textAppearance="@style/profile_name"
        android:elevation="5dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="@id/profile_card"
        app:layout_constraintEnd_toEndOf="@id/profile_card"
        app:layout_constraintTop_toBottomOf="@id/profile_pic"
        />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_email"
        android:textAppearance="@style/profile_email"
        android:elevation="5dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="@id/profile_card"
        app:layout_constraintEnd_toEndOf="@id/profile_card"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        />

    <TextView
        android:id="@+id/profile_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rating: "
        android:textAppearance="@style/profile_email"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="@id/profile_card"
        app:layout_constraintEnd_toEndOf="@id/profile_card"
        app:layout_constraintTop_toBottomOf="@id/profile_email"
        android:layout_marginTop="10dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_edit_btn"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/btn_gray_square"
        android:text="@string/edit_btn_label"
        android:textAppearance="@style/button_3_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit_id" />

    <EditText
        android:id="@+id/profile_edit_fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="8dp"
        android:inputType="text"
        android:hint="@string/profile_fname_hint"
        android:textColorHint="#B0FFFFFF"
        android:background="@drawable/btn_gray_square"
        android:elevation="5dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/profile_card"
        app:layout_constraintEnd_toEndOf="@id/profile_card"
        app:layout_constraintTop_toBottomOf="@id/profile_pic"
        />

    <EditText
        android:id="@+id/profile_edit_lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="8dp"
        android:inputType="text"
        android:hint="@string/profile_lname_hint"
        android:textColorHint="#B0FFFFFF"
        android:background="@drawable/btn_gray_square"
        android:elevation="5dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/profile_card"
        app:layout_constraintEnd_toEndOf="@id/profile_card"
        app:layout_constraintTop_toBottomOf="@id/profile_edit_fname"
        />

    <EditText
        android:id="@+id/profile_edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="8dp"
        android:inputType="textEmailAddress"
        android:hint="@string/profile_email_hint"
        android:textColorHint="#B0FFFFFF"
        android:background="@drawable/btn_gray_square"
        android:elevation="5dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/profile_card"
        app:layout_constraintEnd_toEndOf="@id/profile_card"
        app:layout_constraintTop_toBottomOf="@id/profile_edit_lname"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_confirm_btn"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/btn_green_square"
        android:fontFamily="@font/proximanova_extrabold"
        android:text="@string/confirm_btn_label"
        android:textAppearance="@style/button_3_text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit_id" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_delete_btn"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/btn_red_square"
        android:text="DELETE"
        android:fontFamily="@font/proximanova_extrabold"
        android:textAppearance="@style/button_3_text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_confirm_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_pay_btn"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/btn_red_square"
        android:fontFamily="@font/proximanova_extrabold"
        android:text="Pay"
        android:textAppearance="@style/button_3_text"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profile_verification_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Verification Status: Not Verified"
        android:textSize="16sp"
        android:textColor="#C8102E"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/profile_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_submit_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#C8102E"
        android:text="Submit ID"
        android:textColor="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_verification_status" />

    <TextView
        android:id="@+id/profile_verification_pending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pending Verification"
        android:textSize="16sp"
        android:textColor="#FFA500"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/profile_verification_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <!--    Footer    -->
    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#C8102E"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/house_navBtn"
            android:layout_width="36dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/icon_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/navbar" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/trips_navBtn"
            android:layout_width="36dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/icon_road"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/house_navBtn"
            app:layout_constraintTop_toTopOf="@+id/navbar" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/messages_navBtn"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/icon_mail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/profileBtn"
            app:layout_constraintTop_toTopOf="@+id/navbar" />

        <ImageView
            android:id="@+id/profileBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginHorizontal="10dp"
            android:translationZ="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/navbar"
            app:srcCompat="@drawable/icon_plus" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>