<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1BE48"
    android:backgroundTint="#F1BE48">

    <View
        android:id="@+id/signin_red_rect"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#C8102E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/signin_image"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginBottom="455dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/isucarpool" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/proximanova_extrabold"
        android:gravity="center_horizontal|center_vertical"
        android:text="Sign In"
        android:textAppearance="@style/sign_up"
        android:textSize="78sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signin_red_rect" />

    <EditText
        android:id="@+id/signin_emailInput"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/btn_gray_square"
        android:ems="10"
        android:fontFamily="@font/proximanova_extrabold"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="13dp"
        android:textColorHint="#80FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <EditText
        android:id="@+id/signin_passwordInput"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/btn_gray_square"
        android:ems="10"
        android:fontFamily="@font/proximanova_extrabold"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="13dp"
        android:textColorHint="#80FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_emailInput" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmSignIn"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/btn_blue_square"
        android:fontFamily="@font/proximanova_extrabold"
        android:text="Sign In"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_passwordInput" />

</androidx.constraintlayout.widget.ConstraintLayout>